Added and styled 3 inputs that lead to other pages

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tartes & Co 🍰</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://p16-sign-useast2a.tiktokcdn.com/tos-useast2a-avt-0068-euttp/89d90c74c5d87dd70513d656d8050056~tplv-tiktokx-cropcenter:1080:1080.jpeg?dr=10399&refresh_token=521dae8c&x-expires=1745132400&x-signature=qmF9J%2FWqbQZ0emvqzA9FqVp7k9E%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=no1a" type="image">
 </head>
 <body>
-    
+    <header>
+        <input type="button" onclick="window.location.href='Assortment.html'" value="Our Assortment">
+        <input type="button" onclick="window.location.href='Contact.html'" value="Contact">
+        <input type="button" onclick="window.location.href='About.html'" value="About">
+    </header>
+    <main>
+
+    </main>
 </body>
 </html>
