Added images to front page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header>
-        <input type="button" onclick="window.location.href='assortment.html'" value="Our Assortment">
+        <input type="button" onclick="window.location.href='assortment.html'" value="Assortment">
         <a>|</a>
         <input type="button" onclick="window.location.href='contact.html'" value="Contact">
         <a>|</a>
         <input type="button" onclick="window.location.href='about.html'" value="About">
     </header>
-    <main>
+    <img class="frontpageimage" src="tartescobrown.jpg"></img>
+    <img class="frontpageimage" src="tartescoyellow.jpg"></img>
     </main>
 </body>
 </html>
