Styled images and added placeholder paragraphs to front page

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
         <a>|</a>
         <input type="button" onclick="window.location.href='about.html'" value="About">
     </header>
-    <img class="frontpageimage" src="tartescobrown.jpg"></img>
-    <img class="frontpageimage" src="tartescoyellow.jpg"></img>
+    <div class="textandimages">
+        <p>Welcome to the sweet world of French pastry, crafted with love and artistry. Every dessert is handmade by a passionate French pastry chef whose roots run deep in tradition, creativity, and elegance. From delicate macarons to rich tarts and buttery croissants, each treat is a blend of authentic flavor and refined craftsmanship — made to bring joy to every bite.</p>
+        <img class="frontpageimage" src="tartescobrown.jpg"></img>
+    </div>
+    <div class="textandimages">
+        <img class="frontpageimage" src="tartescoyellow.jpg"></img>
+        <p>Whether you’re planning a cozy gathering, a special celebration, or simply craving something sweet, you’re in the right place. Explore the menu, discover seasonal creations, and place your order with ease. We also welcome custom requests, so don’t hesitate to get in touch — let’s make your dessert dreams come true!</p>
+    </div>
     </main>
 </body>
 </html>
