--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
         <input type="button" onclick="window.location.href='contact.html'" value="Contact">
         <a>|</a>
         <input type="button" onclick="window.location.href='about.html'" value="About">
-    </header>
+    </header>  
+    <div class="showcase">
+        <img class="frontpageshowcase" src="tartescodessert1.jpg"></img>
+        <img class="frontpageshowcase" src="tartescodessert2.jpg"></img>
+        <img class="frontpageshowcase" src="tartescodesserts.jpg"></img>
+        <img class="frontpageshowcase" src="tartescodessert3.jpg"></img>
+        <img class="frontpageshowcase" src="tartescodessert4.jpg"></img>
+    </div>
     <div class="textandimages">
         <p>Welcome to the sweet world of French pastry, crafted with love and artistry. Every dessert is handmade by a passionate French pastry chef whose roots run deep in tradition, creativity, and elegance. From delicate macarons to rich tarts and buttery croissants, each treat is a blend of authentic flavor and refined craftsmanship — made to bring joy to every bite.</p>
         <img class="frontpageimage" src="tartescobrown.jpg"></img>
