Restyling front page showcase

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="button" onclick="window.location.href='html/about.html'" value="About">
     </header>  
     <div class="showcase">
+        <h2 class="showcasetext">Tartes & Co</h2>
         <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
         <img class="frontpageshowcase" src="img/tartescodessert2.jpg"></img>
         <img class="frontpageshowcase" src="img/tartescodesserts.jpg"></img>
