Added footer with links to social medias

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
         <img class="frontpageimage" src="img/tartescoyellow.jpg"></img>
         <p>Whether you’re planning a cozy gathering, a special celebration, or simply craving something sweet, you’re in the right place. Explore the menu, discover seasonal creations, and place your order with ease. We also welcome custom requests, so don’t hesitate to get in touch — let’s make your dessert dreams come true!</p>
     </div>
-    </main>
+    <footer>
+        <div class="socialsdiv">
+            <a target="_blank" href="https://www.instagram.com/salome_atlan_pastry/">
+                <img class="socials" src="img/instagram.png"></img>
+            </a>
+            <a target="_blank" href="https://www.tiktok.com/@tartesco">
+                <img class="socials" src="img/tiktok.png"></img>
+            </a>
+        </div>
+        <h3>© 2025 Tartes & Co</h3>
+    </footer>
 </body>
 </html>
