Added image and text to front page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tartes & Co 🍰</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://p16-sign-useast2a.tiktokcdn.com/tos-useast2a-avt-0068-euttp/89d90c74c5d87dd70513d656d8050056~tplv-tiktokx-cropcenter:1080:1080.jpeg?dr=10399&refresh_token=521dae8c&x-expires=1745132400&x-signature=qmF9J%2FWqbQZ0emvqzA9FqVp7k9E%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=no1a" type="image">
+    <link rel="icon" href="img/tartesco logo.jpeg" type="image">
 </head>
 <body>
     <header>
@@ -22,6 +22,10 @@
         <img class="frontpageshowcase" src="img/tartescodesserts.jpg"></img>
         <img class="frontpageshowcase" src="img/tartescodessert3.jpg"></img>
         <img class="frontpageshowcase" src="img/tartescodessert4.jpg"></img>
+    </div>
+    <div class="textandimages">
+        <img class="frontpageimage" src="img/tartesco logo.jpeg"></img>
+        <p>Welcome to Tartes & Co - a pastry business run by a young French pastry chef with a passion for everything sweet. Inspired by the rich culinary traditions of France, each creation is a blend of classic techniques and fresh, locally-sourced ingredients. From flaky, buttery crusts to velvety fillings, every item is crafted to deliver a delightful experience that transports you to the heart of French patisserie. Whether you're craving a traditional tarte tatin, a seasonal fruit tart, or something uniquely crafted, Tartes & Co brings the art of French baking to life right here in Stockholm. Indulge in a little piece of France with every bite.</p>
     </div>
     <div class="textandimages">
         <p>Welcome to the sweet world of French pastry, crafted with love and artistry. Every dessert is handmade by a passionate French pastry chef whose roots run deep in tradition, creativity, and elegance. From delicate macarons to rich tarts and buttery croissants, each treat is a blend of authentic flavor and refined craftsmanship — made to bring joy to every bite.</p>
