Redesigned image on front page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="frontpageshowcase" src="img/tartescodessert4.jpg"></img>
     </div>
     <div class="textandimages">
-        <img class="frontpageimage" src="img/tartesco logo.jpeg"></img>
+        <img class="frontpageimage" src="img/tartescodessert6.jpg"></img>
         <p>Welcome to Tartes & Co - a pastry business run by a young French pastry chef with a passion for everything sweet. Inspired by the rich culinary traditions of France, each creation is a blend of classic techniques and fresh, locally-sourced ingredients. From flaky, buttery crusts to velvety fillings, every item is crafted to deliver a delightful experience that transports you to the heart of French patisserie. Whether you're craving a traditional tarte tatin, a seasonal fruit tart, or something uniquely crafted, Tartes & Co brings the art of French baking to life right here in Stockholm. Indulge in a little piece of France with every bite.</p>
     </div>
     <div class="textandimages">
