Redesigned front page header and images

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Tartes & Co 🍰</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/tartesco logo.jpeg" type="image">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,18 +21,18 @@
     <div class="showcase">
         <h2 class="showcasetext">Tartes & Co</h2>
         <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
-        <img class="frontpageshowcase" src="img/tartescodessert2.jpg"></img>
-        <img class="frontpageshowcase" src="img/tartescodesserts.jpg"></img>
-        <img class="frontpageshowcase" src="img/tartescodessert3.jpg"></img>
-        <img class="frontpageshowcase" src="img/tartescodessert4.jpg"></img>
+        <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
+        <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
+        <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
+        <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
     </div>
     <div class="textandimages">
         <img class="frontpageimage" src="img/tartescodessert6.jpg"></img>
         <p>Welcome to Tartes & Co - a pastry business run by a young French pastry chef with a passion for everything sweet. Inspired by the rich culinary traditions of France, each creation is a blend of classic techniques and fresh, locally-sourced ingredients. From flaky, buttery crusts to velvety fillings, every item is crafted to deliver a delightful experience that transports you to the heart of French patisserie. Whether you're craving a traditional tarte tatin, a seasonal fruit tart, or something uniquely crafted, Tartes & Co brings the art of French baking to life right here in Stockholm. Indulge in a little piece of France with every bite.</p>
     </div>
     <div class="textandimages">
-        <p>Welcome to the sweet world of French pastry, crafted with love and artistry. Every dessert is handmade by a passionate French pastry chef whose roots run deep in tradition, creativity, and elegance. From delicate macarons to rich tarts and buttery croissants, each treat is a blend of authentic flavor and refined craftsmanship — made to bring joy to every bite.</p>
         <img class="frontpageimage" src="img/tartescobrown.jpg"></img>
+        <p>Welcome to the sweet world of French pastry, crafted with love and artistry. Every dessert is handmade by a passionate French pastry chef whose roots run deep in tradition, creativity, and elegance. From delicate macarons to rich tarts and buttery croissants, each treat is a blend of authentic flavor and refined craftsmanship — made to bring joy to every bite.</p>
     </div>
     <div class="textandimages">
         <img class="frontpageimage" src="img/tartescoyellow.jpg"></img>
