Redesigned header and implemented temporary assortment page

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 </head>
 <body>
     <header>
-        <input type="button" onclick="window.location.href='html/assortment.html'" value="Assortment">
+        <a href="index.html">
+            <img class="logo" src="img/tartescooldlogo.jpg"></img>
+        </a>
+        <input type="button" onclick="window.location.href='assortment.html'" value="Assortment">
         <a>|</a>
-        <input type="button" onclick="window.location.href='html/contact.html'" value="Contact">
+        <input type="button" onclick="window.location.href='contact.html'" value="Contact">
         <a>|</a>
-        <input type="button" onclick="window.location.href='html/about.html'" value="About">
+        <input type="button" onclick="window.location.href='about.html'" value="About">
     </header>  
     <div class="showcase">
         <h2 class="showcasetext">Tartes & Co</h2>
@@ -25,18 +28,6 @@
         <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
         <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
         <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
-    </div>
-    <div class="textandimages">
-        <img class="frontpageimage" src="img/tartescodessert6.jpg"></img>
-        <p>Welcome to Tartes & Co - a pastry business run by a young French pastry chef with a passion for everything sweet. Inspired by the rich culinary traditions of France, each creation is a blend of classic techniques and fresh, locally-sourced ingredients. From flaky, buttery crusts to velvety fillings, every item is crafted to deliver a delightful experience that transports you to the heart of French patisserie. Whether you're craving a traditional tarte tatin, a seasonal fruit tart, or something uniquely crafted, Tartes & Co brings the art of French baking to life right here in Stockholm. Indulge in a little piece of France with every bite.</p>
-    </div>
-    <div class="textandimages">
-        <img class="frontpageimage" src="img/tartescobrown.jpg"></img>
-        <p>Welcome to the sweet world of French pastry, crafted with love and artistry. Every dessert is handmade by a passionate French pastry chef whose roots run deep in tradition, creativity, and elegance. From delicate macarons to rich tarts and buttery croissants, each treat is a blend of authentic flavor and refined craftsmanship — made to bring joy to every bite.</p>
-    </div>
-    <div class="textandimages">
-        <img class="frontpageimage" src="img/tartescoyellow.jpg"></img>
-        <p>Whether you’re planning a cozy gathering, a special celebration, or simply craving something sweet, you’re in the right place. Explore the menu, discover seasonal creations, and place your order with ease. We also welcome custom requests, so don’t hesitate to get in touch — let’s make your dessert dreams come true!</p>
     </div>
     <footer>
         <div class="socialsdiv">
