Fixed border-right in header logo

--- a/assortment.html
+++ b/assortment.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
+        <a class="headerlogo" href="index.html">
             <img class="logo" src="img/tartescooldlogo.jpg"></img>
         </a>
-        <input type="button" onclick="window.location.href='assortment.html'" value="Assortment">
+        <input type="button" class ="redirect" onclick="window.location.href='assortment.html'" value="Assortment">
         <a>|</a>
-        <input type="button" onclick="window.location.href='contact.html'" value="Contact">
+        <input type="button" class ="redirect" onclick="window.location.href='contact.html'" value="Contact">
         <a>|</a>
-        <input type="button" onclick="window.location.href='about.html'" value="About">
+        <input type="button" class ="redirect" onclick="window.location.href='about.html'" value="About">
     </header>  
     <main>
         <div class="showcase">
