Designed about page and restructured front page

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,9 @@
     </header>  
     <main>
             <h2 class="assortmenttext">Contact</h2>
-            <h2 class="contacttext">For any inqueries, including orders, please send us a message through one of our social media channels below:</h2>
+            <div class="socialsdiv">
+                <h2 class="contacttext">For any inquiries, including orders, feel free to reach out to us through one of our social media channels below:</h2>
+            </div>
     </main>
     <footer>
         <div class="socialsdiv">
