--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
         <img class="frontpageshowcase" src="img/tartescodessert1.jpg"></img>
     </div>
+    <div class="frontpagedescription">  
+        <h2 class="assortmenttext">Handcrafted French pastries made with love in Stockholm</h2>
+    </div> 
+    <div class="showcase">  
+        <input type="button" class="onpageredirect" onclick="window.location.href='assortment.html'" value="Explore our offerings">
+    </div>  
     <footer>
         <div class="socialsdiv">
             <a target="_blank" href="https://www.instagram.com/salome_atlan_pastry/">
