Restyling about page

--- a/about.html
+++ b/about.html
@@ -24,13 +24,14 @@
     <div class="showcase">
         <h2 class="assortmenttext">About</h2>
      </div>
+     <div style="display: flex; justify-content: center;">
         <div class="aboutpagetext">
             <h1 class="aboutpagetoptext">A Taste of France in the Heart of Stockholm</h1>
             <p class="assortmentp">Tartes & Co was born from a love for authentic French pastries and a passion for sharing them with others. Founded by a classically trained pastry chef from France, our little bakery brings the delicate flavors and artistry of traditional French patisserie to Stockholm.</p>
             <h1 class="aboutpagetoptext">Meet the Chef</h1>
             <p class="assortmentp"> Hi! I’m Salomé, the pastry chef behind Tartes & Co. <br> Growing up in France, I was surrounded by the aromas of fresh croissants, fruit tarts, and creamy éclairs. After years of perfecting my craft in French kitchens, I moved to Stockholm to share my love for pastries with a new audience. Every tart, choux, and cake I make is crafted by hand, using high-quality ingredients and time-honored techniques.</p>
         </div>
-
+    </div>
     <footer>
         <div class="socialsdiv">
             <a target="_blank" href="https://www.instagram.com/salome_atlan_pastry/">
