--- a/assortment.html
+++ b/assortment.html
@@ -22,7 +22,7 @@
         <input type="button" class ="redirect" onclick="window.location.href='about.html'" value="About">
     </header>  
     <main>
-        <div class="showcase">
+        <div class="assortmentshowcase">
             <h2 class="assortmenttext">Assortment</h2>
          </div>
             <div class="textandimages">
